tests/snapshots/sfc/ts/script_setup__withdefaults_with_optional_props.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


export default defineComponent({
  name: 'test',
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.msg), 1 /* TEXT */))
}
}

})
